--- a/config.liq.example
+++ b/config.liq.example
@@ -4,6 +4,9 @@ set("log.stdout", true)
 set("server.socket", true)
 set("server.socket.path", "/tmp/liquidsoap.sock")
 
+set("scheduler.fast_queues", 1)
+set("scheduler.generic_queues", 6)
+
 base_path = "/opt/wuvt/automation"
 trackman_url = "http://localhost:9090/trackman/api/automation/log"
 trackman_password = "hackme"
