--- a/config.liq.example
+++ b/config.liq.example
@@ -7,7 +7,11 @@ set("server.socket.path", "/tmp/liquidsoap.sock")
 set("scheduler.fast_queues", 1)
 set("scheduler.generic_queues", 6)
 
+set("harbor.ssl.certificate", "/etc/harbor/cert.pem")
+set("harbor.ssl.private_key", "/etc/harbor/privkey.pem")
+
 script_path = "/opt/johnny-six"
 base_path = "/opt/wuvt/automation"
 trackman_url = "http://localhost:9090/trackman/api/automation/log"
 trackman_password = "hackme"
+playlist_api_url = ""
