--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Build Docker image and push to GitHub Package Registry
+name: Build and push Docker image
 on: [push]
 
 jobs:
@@ -6,10 +6,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Publish to GitHub Package Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+    - name: Build and publish Docker image
+      uses: docker/build-push-action@v1
       with:
-        name: wuvt/johnny-six/johnny-six
-        username: wuvt
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: docker.pkg.github.com
+        repository: wuvt/johnny-six
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        tag_with_ref: true
+        add_git_labels: true
+#    - name: Publish to GitHub Package Registry
+#      uses: elgohr/Publish-Docker-Github-Action@master
+#      with:
+#        name: wuvt/johnny-six/johnny-six
+#        username: wuvt
+#        password: ${{ secrets.GITHUB_TOKEN }}
+#        registry: docker.pkg.github.com
