Switch to GitHub Container Registry

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,9 +17,9 @@ jobs:
     - name: Build and push Docker image to GitHub Package Registry
       uses: docker/build-push-action@v1
       with:
-        repository: wuvt/johnny-six/johnny-six
+        repository: wuvt/johnny-six
         username: wuvt
         password: ${{ secrets.GITHUB_TOKEN }}
-        registry: docker.pkg.github.com
+        registry: ghcr.io
         tag_with_ref: true
         add_git_labels: true
